--- a/src/app/components/polymer/paper-icon-button/paper-icon-button.component.css
+++ b/src/app/components/polymer/paper-icon-button/paper-icon-button.component.css
@@ -23,6 +23,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 6px;
+    color: inherit;
 }
 
 :host(.row-actions__icon):hover,
